# skelearn

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: categories.json  data.json  main.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json  skelearn.conf  tsconfig.json  vite.config.ts  webpack.config.ts
frontend/public/: favicon.xcf  index.html  logo192.xcf  logo512.xcf  manifest.json
frontend/src/: App.scss  App.tsx  api.ts  auth.tsx  colors.module.scss  index.scss  index.tsx  main.scss  main.tsx
frontend/src/components/: Alert.scss  Alert.tsx  Button.scss  Button.tsx  Card.scss  Card.tsx  Check.scss  Check.tsx  IconButton.scss  IconButton.tsx  Input.scss  Input.tsx  Loading.tsx  ProgressBar.tsx  Select.scss  Select.tsx  Spinner.scss  Spinner.tsx  ZoomImage.scss  ZoomImage.tsx
frontend/src/pages/: Categories.scss  Categories.tsx  Dashboard.scss  Dashboard.tsx  Home.scss  Home.tsx  Impressum.scss  Impressum.tsx  Learn.scss  Learn.tsx  Login.scss  Login.tsx  RealExam.tsx  Register.tsx  RegularExam.scss  RegularExam.tsx  SpacedRepExam.tsx  TimedExam.tsx
frontend/ssl/: skelearn.cert  skelearn.csr  skelearn.key
vite-project/: index.html
vite-project/src/: App.tsx
vite-project/src/pages/: Home.scss  Home.tsx  Login.tsx
wpfront/: babel.config.js  package.json  tsconfig.json  webpack.config.ts
wpfront/src/: App.scss  colors.module.scss  index.html  main.scss  main.tsx
wpfront/src/components/: Alert.tsx  Button.scss  Button.tsx  Card.tsx  Input.tsx  Loading.scss  Loading.tsx  ProgressBar.scss  Select.tsx  (+3 more)
(+8 files in other folders)
