[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rand_chacha = "0.3.1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-cors = "0.6.1"
mongodb = "2.2.2"
eyre = "0.6.8"
bcrypt = "0.13.0"

[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = 0